--- a/LovoForms/LovoForms.csproj
+++ b/LovoForms/LovoForms.csproj
@@ -35,6 +35,14 @@
     <EmbeddedResource Include="Master\Master.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resx\App.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>App.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resx\JobCards.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>JobCards.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -55,6 +63,12 @@
     <Compile Include="Model\Form\Property.cs" />
     <Compile Include="Model\Form\Forms\JobCard.cs" />
     <Compile Include="Model\Form\Properties\KeyValueProperty.cs" />
+    <Compile Include="Resx\App.Designer.cs">
+      <DependentUpon>App.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resx\JobCards.Designer.cs">
+      <DependentUpon>JobCards.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -77,6 +91,7 @@
     <Folder Include="Model\Form\" />
     <Folder Include="Model\Form\Forms\" />
     <Folder Include="Model\Form\Properties\" />
+    <Folder Include="Resx\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.1.114\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
